# gst-plugins-splitmuxsink

./: CMakeLists.txt  README.md  gstsplitmuxsink.c  plugin.c
